[Broken] Big rework to better define cache files

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -111,28 +111,30 @@
     <Compile Include="Audio\JagaParseException.cs" />
     <Compile Include="Audio\Soundtrack.cs" />
     <Compile Include="Audio\SoundtrackException.cs" />
-    <Compile Include="Cache\CacheFile.cs" />
-    <Compile Include="Cache\CacheFileInfo.cs" />
-    <Compile Include="Cache\CacheFileNotFoundException.cs" />
+    <Compile Include="Cache\CacheFile\BaseCacheFile.cs" />
+    <Compile Include="Cache\CacheFile\CacheFileInfo.cs" />
+    <Compile Include="Cache\CacheFile\CacheFileNotFoundException.cs" />
+    <Compile Include="Cache\CacheFile\DataCacheFile.cs" />
     <Compile Include="Cache\Downloader\CacheDownloader.cs" />
     <Compile Include="Cache\Downloader\DownloaderException.cs" />
     <Compile Include="Cache\Downloader\FileRequest.cs" />
     <Compile Include="Cache\Downloader\HttpFileRequest.cs" />
     <Compile Include="Cache\Downloader\TcpFileRequest.cs" />
     <Compile Include="Cache\Downloader\TcpHandshakeResponse.cs" />
+    <Compile Include="Cache\CacheFile\EntryCacheFile.cs" />
     <Compile Include="Cache\Index.cs" />
-    <Compile Include="Cache\CacheFileOptions.cs" />
+    <Compile Include="Cache\CacheFile\CacheFileOptions.cs" />
     <Compile Include="Cache\RuneTek5\CompressionType.cs" />
+    <Compile Include="Cache\RuneTek5\RuneTek5FileDecoder.cs" />
     <Compile Include="Cache\RuneTek5\Language.cs" />
     <Compile Include="Cache\RuneTek5\MasterReferenceTable.cs" />
     <Compile Include="Cache\RuneTek5\MasterReferenceTableTable.cs" />
-    <Compile Include="Cache\CacheFileEntryInfo.cs" />
+    <Compile Include="Cache\CacheFile\CacheFileEntryInfo.cs" />
     <Compile Include="Cache\RuneTek5\Sector.cs" />
     <Compile Include="Cache\RuneTek5\SectorException.cs" />
     <Compile Include="Cache\CacheException.cs" />
     <Compile Include="Cache\CacheBase.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
-    <Compile Include="Cache\RuneTek5\RuneTek5CacheFile.cs" />
     <Compile Include="Enums\EnumFile.cs" />
     <Compile Include="Enums\EnumParseException.cs" />
     <Compile Include="Cache\RuneTek5\FileStore.cs" />
