Enable debug mode in CI tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 solution: RuneScapeCacheTools.sln
 script:
   - xbuild /p:Configuration=Release RuneScapeCacheTools.sln
-  - mono packages/xunit.runner.console.*/tools/xunit.console.exe RuneScapeCacheToolsTests/bin/Release/RuneScapeCacheToolsTests.dll
+  - mono --debug packages/xunit.runner.console.*/tools/xunit.console.exe RuneScapeCacheToolsTests/bin/Release/RuneScapeCacheToolsTests.dll
 addons:
   apt:
     packages:
