--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CacheDownloaderTests.cs" />
     <Compile Include="SoundtrackTests.cs" />
+    <Compile Include="TestCacheConstructor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RuneScapeCacheTools\RuneScapeCacheTools.csproj">
