--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -97,7 +97,6 @@
     <Compile Include="Audio\SoundtrackException.cs" />
     <Compile Include="Cache\CacheFile\BaseCacheFile.cs" />
     <Compile Include="Cache\CacheFile\CacheFileInfo.cs" />
-    <Compile Include="Cache\CacheFile\CacheFileNotFoundException.cs" />
     <Compile Include="Cache\CacheFile\DataCacheFile.cs" />
     <Compile Include="Cache\Downloader\CacheDownloader.cs" />
     <Compile Include="Cache\Downloader\DownloaderException.cs" />
@@ -108,18 +107,16 @@
     <Compile Include="Cache\Index.cs" />
     <Compile Include="Cache\CacheFile\CacheFileOptions.cs" />
     <Compile Include="Cache\RuneTek5\CompressionType.cs" />
+    <Compile Include="Cache\DecodeException.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5FileDecoder.cs" />
     <Compile Include="Cache\RuneTek5\Language.cs" />
     <Compile Include="Cache\RuneTek5\MasterReferenceTable.cs" />
     <Compile Include="Cache\RuneTek5\MasterReferenceTableTable.cs" />
     <Compile Include="Cache\CacheFile\CacheFileEntryInfo.cs" />
     <Compile Include="Cache\RuneTek5\Sector.cs" />
-    <Compile Include="Cache\RuneTek5\SectorException.cs" />
-    <Compile Include="Cache\CacheException.cs" />
     <Compile Include="Cache\CacheBase.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
     <Compile Include="Enums\EnumFile.cs" />
-    <Compile Include="Enums\EnumParseException.cs" />
     <Compile Include="Cache\RuneTek5\FileStore.cs" />
     <Compile Include="Cache\RuneTek5\IndexPointer.cs" />
     <Compile Include="Cache\ExtendableExtensionGuesser.cs" />
