--- a/RuneScapeCacheToolsCLI/packages.config
+++ b/RuneScapeCacheToolsCLI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net461" developmentDependency="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net461" />
 </packages>
