--- a/RuneScapeCacheTools/packages.config
+++ b/RuneScapeCacheTools/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
   <package id="FlacLibSharp" version="2.0.0" targetFramework="net461" />
-  <package id="log4net" version="2.0.5" targetFramework="net461" />
-  <package id="Noemax.Compression" version="16.345.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.7" targetFramework="net461" />
+  <package id="LZMA-SDK" version="9.20" targetFramework="net461" />
   <package id="NVorbis" version="0.8.5.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
 </packages>
