--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Fixtures\CacheFixture.cs" />
     <Compile Include="RuneTek5CacheTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CacheDownloaderTests.cs" />
+    <Compile Include="DownloaderCacheTests.cs" />
     <Compile Include="SoundtrackTests.cs" />
     <Compile Include="TestCacheConstructor.cs" />
   </ItemGroup>
