Small change to indicate upcoming approach changes

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Cache\Downloader\HttpFileRequest.cs" />
     <Compile Include="Cache\Downloader\TcpFileRequest.cs" />
     <Compile Include="Cache\Downloader\TcpHandshakeResponse.cs" />
+    <Compile Include="CacheFiles\ItemDefinition.cs" />
     <Compile Include="Cache\Index.cs" />
     <Compile Include="Cache\RuneTek5\CacheFileOptions.cs" />
     <Compile Include="Cache\RuneTek5\CompressionType.cs" />
