--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -84,24 +84,21 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Audio\AudioChunkDescriptor.cs" />
-    <Compile Include="Audio\JagaFile.cs" />
-    <Compile Include="Audio\Soundtrack.cs" />
-    <Compile Include="Audio\SoundtrackException.cs" />
-    <Compile Include="Cache\CacheFile.cs" />
+    <Compile Include="Cache\BaseVarType.cs" />
     <Compile Include="Cache\CacheFileInfo.cs" />
-    <Compile Include="Cache\DataCacheFile.cs" />
+    <Compile Include="Cache\Files\CacheFile.cs" />
+    <Compile Include="Cache\Files\BinaryFile.cs" />
+    <Compile Include="Cache\Files\EnumFile.cs" />
+    <Compile Include="Cache\Files\ItemDefinitionFile.cs" />
     <Compile Include="Cache\Downloader\DownloaderCache.cs" />
-    <Compile Include="Cache\Downloader\DownloaderException.cs" />
     <Compile Include="Cache\Downloader\FileRequest.cs" />
     <Compile Include="Cache\Downloader\HttpFileRequest.cs" />
     <Compile Include="Cache\Downloader\TcpFileRequest.cs" />
     <Compile Include="Cache\Downloader\TcpHandshakeResponse.cs" />
-    <Compile Include="CacheFileTypes\ItemDefinition.cs" />
+    <Compile Include="Cache\Files\JagaFile.cs" />
     <Compile Include="Cache\Index.cs" />
     <Compile Include="Cache\RuneTek5\CacheFileOptions.cs" />
     <Compile Include="Cache\RuneTek5\CompressionType.cs" />
-    <Compile Include="Cache\DecodeException.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5FileDecoder.cs" />
     <Compile Include="Cache\RuneTek5\Language.cs" />
     <Compile Include="Cache\RuneTek5\MasterReferenceTable.cs" />
@@ -110,20 +107,21 @@
     <Compile Include="Cache\RuneTek5\Sector.cs" />
     <Compile Include="Cache\CacheBase.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
-    <Compile Include="Enums\EnumFile.cs" />
+    <Compile Include="Cache\ScriptVarType.cs" />
     <Compile Include="Cache\RuneTek5\FileStore.cs" />
     <Compile Include="Cache\RuneTek5\IndexPointer.cs" />
     <Compile Include="Cache\ExtendableExtensionGuesser.cs" />
-    <Compile Include="Enums\EnumOpcode.cs" />
-    <Compile Include="Enums\BaseVarType.cs" />
-    <Compile Include="Enums\ScriptVarType.cs" />
     <Compile Include="Cache\IExtensionGuesser.cs" />
     <Compile Include="Cache\Vector3.cs" />
+    <Compile Include="Exceptions\DecodeException.cs" />
+    <Compile Include="Exceptions\DownloaderException.cs" />
+    <Compile Include="Exceptions\SoundtrackException.cs" />
     <Compile Include="Extensions\BinaryStreamExtensions.cs" />
     <Compile Include="Extensions\PathExtensions.cs" />
     <Compile Include="Extensions\ExtendedProgress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
+    <Compile Include="Soundtrack.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Cache\RuneTek7\" />
