Use reflection and formatter for listing item definition properties
Comment out tests that need to be fixed

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Exceptions\DownloaderException.cs" />
     <Compile Include="Exceptions\SoundtrackException.cs" />
     <Compile Include="Extensions\BinaryStreamExtensions.cs" />
+    <Compile Include="Extensions\Formatter.cs" />
     <Compile Include="Extensions\PathExtensions.cs" />
     <Compile Include="Extensions\ExtendedProgress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
