--- a/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
+++ b/RuneScapeCacheToolsTests/RuneScapeCacheToolsTests.csproj
@@ -84,22 +84,22 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="BinaryStreamExtensionsTests.cs" />
-    <Compile Include="FileStoreTests.cs" />
-    <Compile Include="FileTypesTests\EntryFileTests.cs" />
-    <Compile Include="FileTypesTests\ItemDefinitionFileTests.cs" />
-    <Compile Include="FileTypesTests\JagaFileTests.cs" />
-    <Compile Include="FileTypesTests\ReferenceTableFileTests.cs" />
     <Compile Include="Fixtures\TestCacheCollection.cs" />
     <Compile Include="Fixtures\TestCacheFixture.cs" />
-    <Compile Include="FlatFileCacheTests.cs" />
-    <Compile Include="FormatterTests.cs" />
-    <Compile Include="CacheTypesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DownloaderCacheTests.cs" />
-    <Compile Include="SoundtrackTests.cs" />
-    <Compile Include="TemporaryTests.cs" />
     <Compile Include="TestCacheConstructor.cs" />
+    <Compile Include="Tests\BinaryStreamExtensionsTests.cs" />
+    <Compile Include="Tests\CacheTypesTests.cs" />
+    <Compile Include="Tests\DownloaderCacheTests.cs" />
+    <Compile Include="Tests\FileStoreTests.cs" />
+    <Compile Include="Tests\FileTypesTests\EntryFileTests.cs" />
+    <Compile Include="Tests\FileTypesTests\ItemDefinitionFileTests.cs" />
+    <Compile Include="Tests\FileTypesTests\JagaFileTests.cs" />
+    <Compile Include="Tests\FileTypesTests\ReferenceTableFileTests.cs" />
+    <Compile Include="Tests\FlatFileCacheTests.cs" />
+    <Compile Include="Tests\FormatterTests.cs" />
+    <Compile Include="Tests\SoundtrackTests.cs" />
+    <Compile Include="Tests\TemporaryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RuneScapeCacheTools\RuneScapeCacheTools.csproj">
