Add working directory to CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     build:
         docker:
             - image: mono:latest
+        working_directory: ~/rsct/
         steps:
             - checkout
             - run:
