--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,4 @@
 version: 2.0
-
 jobs:
     build:
         docker:
@@ -8,11 +7,11 @@ jobs:
         steps:
             - checkout
             - run:
-                name: install-package-dependencies
-                command: "sudo apt-get update && sudo apt-get install -y sox"
+                name: Install package dependencies
+                command: apt-get update && apt-get install -y sox
             - run:
-                name: build
-                command: "xbuild /p:Configuration=Release RuneScapeCacheTools.sln"
+                name: Build
+                command: xbuild /p:Configuration=Release RuneScapeCacheTools.sln
             - run:
-                name: test
-                command: "mono --debug packages/xunit.runner.console.*/tools/xunit.console.exe RuneScapeCacheToolsTests/bin/Release/RuneScapeCacheToolsTests.dll"
+                name: Test
+                command: mono --debug packages/xunit.runner.console.*/tools/xunit.console.exe RuneScapeCacheToolsTests/bin/Release/RuneScapeCacheToolsTests.dll
