--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,11 @@ jobs:
                 name: Install package dependencies
                 command: apt-get update && apt-get install -y sox
             - run:
+                name: Install NuGet dependencies
+                command: nuget restore
+            - run:
                 name: Build
-                command: xbuild /p:Configuration=Release RuneScapeCacheTools.sln
+                command: msbuild /p:Configuration=Release RuneScapeCacheTools.sln
             - run:
                 name: Test
                 command: mono --debug packages/xunit.runner.console.*/tools/xunit.console.exe RuneScapeCacheToolsTests/bin/Release/RuneScapeCacheToolsTests.dll
