--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,9 @@ jobs:
 
             - run:
                 name: Merge assemblies
-                command: nuget install ILRepack
-                command: packages/ILRepack.*/tools/ILRepack.exe /out:rsct.exe RuneScapeCacheToolsCLI/bin/Release/rsct.exe RuneScapeCacheToolsCLI/bin/Release/*.dll
+                command:
+                    - nuget install ILRepack
+                    - packages/ILRepack.*/tools/ILRepack.exe /out:rsct.exe RuneScapeCacheToolsCLI/bin/Release/rsct.exe RuneScapeCacheToolsCLI/bin/Release/*.dll
 
             - store_artifacts:
                 path: rsct.*
