Grant permission to ILRepack.exe before running it
Why ILRepack needs it and XUnit's runner does not I can't tell you.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
                 name: Merge assemblies
                 command: |
                     nuget install ILRepack -OutputDirectory packages &&
+                    chmod u+x packages/ILRepack.*/tools/ILRepack.exe &&
                     packages/ILRepack.*/tools/ILRepack.exe /out:rsct.exe RuneScapeCacheToolsCLI/bin/Release/rsct.exe RuneScapeCacheToolsCLI/bin/Release/*.dll
 
             - store_artifacts:
