--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
                 name: Merge assemblies
                 command: |
                     nuget install ILRepack -OutputDirectory packages &&
-                    mono packages/ILRepack.*/tools/ILRepack.exe /out:rsct.exe RuneScapeCacheToolsCLI/bin/Release/rsct.exe RuneScapeCacheToolsCLI/bin/Release/*.dll
+                    mono packages/ILRepack.*/tools/ILRepack.exe /out:artifacts/rsct.exe RuneScapeCacheToolsCLI/bin/Release/rsct.exe RuneScapeCacheToolsCLI/bin/Release/*.dll
 
             - store_artifacts:
-                path: rsct.*
+                path: artifacts/
