Refactor CLI and everything else

--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -80,46 +80,43 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\BaseVarType.cs" />
-    <Compile Include="Cache\CacheFile.cs" />
-    <Compile Include="Cache\CacheFileInfo.cs" />
-    <Compile Include="Cache\Downloader\HttpFileDownloader.cs" />
-    <Compile Include="Cache\Downloader\IFileDownloader.cs" />
-    <Compile Include="Cache\Downloader\TcpFileDownloader.cs" />
-    <Compile Include="Cache\FileTypes\BinaryFile.cs" />
-    <Compile Include="Cache\FileTypes\EntryFile.cs" />
-    <Compile Include="Cache\FileTypes\EnumFile.cs" />
-    <Compile Include="Cache\FileTypes\ItemDefinitionFile.cs" />
-    <Compile Include="Cache\Downloader\DownloaderCache.cs" />
-    <Compile Include="Cache\FileTypes\JagaFile.cs" />
-    <Compile Include="Cache\FileTypes\MasterReferenceTableFile.cs" />
-    <Compile Include="Cache\FileTypes\ReferenceTableFile.cs" />
-    <Compile Include="Cache\FlatFile\FlatFileCache.cs" />
-    <Compile Include="Cache\Index.cs" />
-    <Compile Include="Cache\Language.cs" />
+    <Compile Include="Cache\DownloaderCache.cs" />
+    <Compile Include="Cache\FlatFileCache.cs" />
     <Compile Include="Cache\ReferenceTableCache.cs" />
-    <Compile Include="Cache\RuneTek5\CacheFileOptions.cs" />
-    <Compile Include="Cache\RuneTek5\CompressionType.cs" />
-    <Compile Include="Cache\RuneTek5\CacheFileEntryInfo.cs" />
-    <Compile Include="Cache\RuneTek5\Sector.cs" />
-    <Compile Include="Cache\CacheBase.cs" />
-    <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
-    <Compile Include="Cache\ScriptVarType.cs" />
-    <Compile Include="Cache\RuneTek5\FileStore.cs" />
-    <Compile Include="Cache\RuneTek5\IndexPointer.cs" />
-    <Compile Include="Cache\ExtensionGuesser.cs" />
-    <Compile Include="Cache\Vector3.cs" />
-    <Compile Include="Exceptions\DecodeException.cs" />
-    <Compile Include="Exceptions\DownloaderException.cs" />
-    <Compile Include="Exceptions\SoundtrackException.cs" />
-    <Compile Include="Extensions\BinaryStreamExtensions.cs" />
-    <Compile Include="Extensions\Formatter.cs" />
-    <Compile Include="Extensions\PathExtensions.cs" />
+    <Compile Include="Cache\RuneTek5Cache.cs" />
+    <Compile Include="Cache\BaseCache.cs" />
+    <Compile Include="Exception\DecodeException.cs" />
+    <Compile Include="Exception\DownloaderException.cs" />
+    <Compile Include="Exception\SoundtrackException.cs" />
+    <Compile Include="Extension\BinaryStreamExtensions.cs" />
+    <Compile Include="Extension\PathExtensions.cs" />
+    <Compile Include="File\BinaryFile.cs" />
+    <Compile Include="File\CacheFile.cs" />
+    <Compile Include="File\EntryFile.cs" />
+    <Compile Include="File\EnumFile.cs" />
+    <Compile Include="File\ItemDefinitionFile.cs" />
+    <Compile Include="File\JagaFile.cs" />
+    <Compile Include="File\MasterReferenceTableFile.cs" />
+    <Compile Include="File\ReferenceTableFile.cs" />
+    <Compile Include="Model\BaseVarType.cs" />
+    <Compile Include="Model\CacheFileEntryInfo.cs" />
+    <Compile Include="Model\CacheFileInfo.cs" />
+    <Compile Include="Model\CacheFileOptions.cs" />
+    <Compile Include="Model\CompressionType.cs" />
+    <Compile Include="Model\Index.cs" />
+    <Compile Include="Model\IndexPointer.cs" />
+    <Compile Include="Model\Language.cs" />
+    <Compile Include="Model\ScriptVarType.cs" />
+    <Compile Include="Model\Sector.cs" />
+    <Compile Include="Model\Vector3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Soundtrack.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Cache\RuneTek7\" />
+    <Compile Include="Utility\ExtensionGuesser.cs" />
+    <Compile Include="Utility\FileStore.cs" />
+    <Compile Include="Utility\Formatter.cs" />
+    <Compile Include="Utility\HttpFileDownloader.cs" />
+    <Compile Include="Utility\IFileDownloader.cs" />
+    <Compile Include="Utility\Soundtrack.cs" />
+    <Compile Include="Utility\TcpFileDownloader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
