--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -80,43 +80,44 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\DownloaderCache.cs" />
-    <Compile Include="Cache\FlatFileCache.cs" />
-    <Compile Include="Cache\ReferenceTableCache.cs" />
-    <Compile Include="Cache\RuneTek5Cache.cs" />
-    <Compile Include="Cache\BaseCache.cs" />
+    <Compile Include="Cache\CacheFile.cs" />
+    <Compile Include="Cache\Downloader\DownloaderCache.cs" />
+    <Compile Include="Cache\Downloader\HttpFileDownloader.cs" />
+    <Compile Include="Cache\Downloader\IFileDownloader.cs" />
+    <Compile Include="Cache\Downloader\MasterReferenceTable.cs" />
+    <Compile Include="Cache\Downloader\TcpFileDownloader.cs" />
+    <Compile Include="Cache\FlatFile\FlatFileCache.cs" />
+    <Compile Include="Cache\ICache.cs" />
+    <Compile Include="Cache\JavaClient\FileStore.cs" />
+    <Compile Include="Cache\JavaClient\IndexPointer.cs" />
+    <Compile Include="Cache\JavaClient\JavaClientCache.cs" />
+    <Compile Include="Cache\JavaClient\Sector.cs" />
+    <Compile Include="Cache\RuneTek5\CacheFileEntryInfo.cs" />
+    <Compile Include="Cache\RuneTek5\EntryFile.cs" />
+    <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
+    <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
+    <Compile Include="Cache\RuneTek5\RuneTek5CacheFile.cs" />
+    <Compile Include="Cache\RuneTek5\RuneTek5CacheFileInfo.cs" />
+    <Compile Include="Cache\RuneTek5\RuneTek5ReferenceTable.cs" />
     <Compile Include="Exception\DecodeException.cs" />
     <Compile Include="Exception\DownloaderException.cs" />
     <Compile Include="Exception\SoundtrackException.cs" />
     <Compile Include="Extension\BinaryStreamExtensions.cs" />
     <Compile Include="Extension\PathExtensions.cs" />
-    <Compile Include="File\BinaryFile.cs" />
-    <Compile Include="File\CacheFile.cs" />
-    <Compile Include="File\EntryFile.cs" />
     <Compile Include="File\EnumFile.cs" />
     <Compile Include="File\ItemDefinitionFile.cs" />
     <Compile Include="File\JagaFile.cs" />
-    <Compile Include="File\MasterReferenceTableFile.cs" />
-    <Compile Include="File\ReferenceTableFile.cs" />
     <Compile Include="Model\BaseVarType.cs" />
-    <Compile Include="Model\CacheFileEntryInfo.cs" />
-    <Compile Include="Model\CacheFileInfo.cs" />
     <Compile Include="Model\CacheFileOptions.cs" />
+    <Compile Include="Model\CacheIndex.cs" />
     <Compile Include="Model\CompressionType.cs" />
-    <Compile Include="Model\Index.cs" />
-    <Compile Include="Model\IndexPointer.cs" />
     <Compile Include="Model\Language.cs" />
     <Compile Include="Model\ScriptVarType.cs" />
-    <Compile Include="Model\Sector.cs" />
     <Compile Include="Model\Vector3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\ExtensionGuesser.cs" />
-    <Compile Include="Utility\FileStore.cs" />
     <Compile Include="Utility\Formatter.cs" />
-    <Compile Include="Utility\HttpFileDownloader.cs" />
-    <Compile Include="Utility\IFileDownloader.cs" />
-    <Compile Include="Utility\Soundtrack.cs" />
-    <Compile Include="Utility\TcpFileDownloader.cs" />
+    <Compile Include="Utility\SoundtrackExtractor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
