--- a/RuneScapeCacheTools/RuneScapeCacheTools.csproj
+++ b/RuneScapeCacheTools/RuneScapeCacheTools.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Cache\JavaClient\JavaClientCache.cs" />
     <Compile Include="Cache\JavaClient\Sector.cs" />
     <Compile Include="Cache\RuneTek5\CacheFileEntryInfo.cs" />
-    <Compile Include="Cache\RuneTek5\EntryFile.cs" />
+    <Compile Include="Cache\RuneTek5\CompressionType.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTable.cs" />
     <Compile Include="Cache\RuneTek5\ReferenceTableOptions.cs" />
     <Compile Include="Cache\RuneTek5\RuneTek5Cache.cs" />
@@ -105,12 +105,12 @@
     <Compile Include="Exception\SoundtrackException.cs" />
     <Compile Include="Extension\BinaryStreamExtensions.cs" />
     <Compile Include="Extension\PathExtensions.cs" />
+    <Compile Include="File\EntryFile.cs" />
     <Compile Include="File\EnumFile.cs" />
     <Compile Include="File\ItemDefinitionFile.cs" />
     <Compile Include="File\JagaFile.cs" />
     <Compile Include="Model\BaseVarType.cs" />
     <Compile Include="Model\CacheIndex.cs" />
-    <Compile Include="Model\CompressionType.cs" />
     <Compile Include="Model\Language.cs" />
     <Compile Include="Model\ScriptVarType.cs" />
     <Compile Include="Model\Vector3.cs" />
